<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/aviso_eliminar_lugares">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_textos">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/alt_imagen"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/azul2"/>
            <com.farfly.MiTextView
                android:id="@+id/aviso"
                android:text="@string/titulo_aviso_eliminar_lugares"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/azul2"
                android:paddingLeft="10dp"
                style="@style/estilo_titulo"
                />
        </LinearLayout>
        <com.farfly.MiTextView
            android:id="@+id/texto_aviso"
            android:text="@string/texto_aviso_eliminar_lugares"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            style="@style/estilo_texto"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.farfly.MiButton
            android:text="@string/aceptar"
            android:id="@+id/btn_aceptar_eliminar_lugares"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/button_aviso"
            android:layout_weight="1"/>

        <com.farfly.MiButton
            android:text="@string/aviso_cancelar"
            android:id="@+id/btn_cancelar_eliminar_lugares"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/button_aviso"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>