<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/azul2">
        <ImageView
            android:id="@+id/logo_editar"
            android:background="@drawable/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/alt_imagen"/>

        <com.farfly.MiTextView
            android:id="@+id/cabecera_mostrar_lugar"
            android:text="@string/opcion_acerca_app"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            style="@style/estilo_titulo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.farfly.MiTextView
                android:id="@+id/nombre_aplicacion"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/nombre_aplicacion"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                style="@style/estilo_titulo_opciones"
                android:layout_weight="1"/>
            <com.farfly.MiTextView
                android:id="@+id/texto_nombre_aplicacion"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/texto_nombre_aplicacion"
                android:layout_marginTop="10dp"
                style="@style/estilo_texto"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.farfly.MiTextView
                android:id="@+id/min_version"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/min_version"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                style="@style/estilo_titulo_opciones"
                android:layout_weight="1"/>
            <com.farfly.MiTextView
                android:id="@+id/texto_min_version"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/texto_min_version"
                android:layout_marginTop="10dp"
                style="@style/estilo_texto"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.farfly.MiTextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/fecha"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                style="@style/estilo_titulo_opciones"
                android:layout_weight="1"/>
            <com.farfly.MiTextView
                android:id="@+id/texto_fecha"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/texto_fecha"
                android:layout_marginTop="10dp"
                style="@style/estilo_texto"
                android:layout_weight="1"/>
        </LinearLayout>

            <com.farfly.MiTextView
                android:id="@+id/idioma_app"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/idioma"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                style="@style/estilo_titulo_opciones"
                android:layout_weight="1"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <com.farfly.MiTextView
                    android:id="@+id/texto_idioma_español"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/español"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_centerHorizontal="true"
                    style="@style/estilo_texto"

                    />
                <ImageView
                    android:id="@+id/bandera_es"
                    android:background="@drawable/bandera_es"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alt_imagen"
                    android:layout_toLeftOf="@id/texto_idioma_español"/>
                <com.farfly.MiTextView
                    android:id="@+id/texto_idioma_ingles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingles"
                    android:layout_below="@id/texto_idioma_español"
                    style="@style/estilo_texto"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_centerHorizontal="true"/>
                <ImageView
                    android:id="@+id/bandera_en"
                    android:background="@drawable/bandera_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alt_imagen"
                    android:layout_below="@id/bandera_es"
                    android:layout_toLeftOf="@id/texto_idioma_ingles"
                    android:layout_marginTop="20dp"/>

            </RelativeLayout>


    </LinearLayout>

</LinearLayout>
